Feature union pipeline wip

--- a/Helpful score prediction.ipynb
+++ b/Helpful score prediction.ipynb
@@ -9,26 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 135,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Coac\\Anaconda3\\lib\\site-packages\\sklearn\\cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
-      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "% matplotlib inline\n",
     "\n",
     "import pickle\n",
+    "import numpy as np\n",
     "\n",
     "from operator import itemgetter\n",
     "\n",
     "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.pipeline import FeatureUnion\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.linear_model import SGDClassifier\n",
     "from sklearn.metrics import classification_report\n",
@@ -392,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -422,24 +415,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
+    "class MultipleItemSelector(BaseEstimator, TransformerMixin):\n",
+    "    def __init__(self, keys):\n",
+    "        self.keys = keys\n",
+    "\n",
+    "    def fit(self, x, y=None):\n",
+    "        return self\n",
+    "\n",
+    "    def transform(self, data_dict):\n",
+    "        return data_dict[:, self.keys]\n",
+    "\n",
+    "def identity(x): \n",
+    "    return x\n",
+    "\n",
     "def create_pipeline(classifier=SGDClassifier):\n",
-    "    \n",
-    "    def identity(x): return x\n",
-    "    \n",
     "    if isinstance(classifier, type):\n",
     "        classifier = classifier()\n",
     "\n",
     "    model = Pipeline([\n",
-    "        ('preprocessor', NLTKPreprocessor()),\n",
-    "        ('vectorizer', TfidfVectorizer(\n",
-    "            tokenizer=identity, preprocessor=None, lowercase=False\n",
+    "        ('union', FeatureUnion(\n",
+    "            transformer_list=[\n",
+    "                ('summary', Pipeline([\n",
+    "                    ('selector', MultipleItemSelector(keys=0)),\n",
+    "                    ('preprocessor', NLTKPreprocessor()),\n",
+    "                    ('vectorizer', TfidfVectorizer(\n",
+    "                        tokenizer=identity, preprocessor=None, lowercase=False\n",
+    "                    )),\n",
+    "                ])),\n",
+    "                ('reviewText', Pipeline([\n",
+    "                    ('selector', MultipleItemSelector(keys=1)),\n",
+    "                    ('preprocessor', NLTKPreprocessor()),\n",
+    "                    ('vectorizer', TfidfVectorizer(\n",
+    "                        tokenizer=identity, preprocessor=None, lowercase=False\n",
+    "                    )),\n",
+    "                ])),\n",
+    "#                 ('num_values', Pipeline([\n",
+    "#                     ('selector', MultipleItemSelector(keys=2))\n",
+    "#                 ])),\n",
+    "            ],\n",
+    "            transformer_weights={\n",
+    "                'summary': 1.0,\n",
+    "                'reviewText': 1.0,\n",
+    "#                 'num_values': 1.0,\n",
+    "            },\n",
     "        )),\n",
+    "\n",
     "        ('classifier', classifier),\n",
     "    ])\n",
+    "        \n",
     "\n",
     "    return model"
    ]
@@ -474,13 +501,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
     "y = ps_reviews.helpfulOrNot.values\n",
     "# y = ps_reviews.overall.apply(lambda x: str(x)).values\n",
-    "X = ps_reviews.summary.values + ps_reviews.reviewText.values \n",
+    "X = ps_reviews.summary.values\n",
+    "X = X.reshape(len(X), 1)\n",
+    "X = np.append(X, np.array(ps_reviews.reviewText.values).reshape(len(X), 1), 1)\n",
+    "X = np.append(X, np.array(ps_reviews.helpfulCount.values).reshape(len(X), 1), 1)\n",
     "\n",
     "label_encoder = LabelEncoder()\n",
     "y = label_encoder.fit_transform(y)\n",
@@ -490,7 +520,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "608"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(X_train[:,2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -507,17 +557,17 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "    helpful       0.48      0.46      0.47        81\n",
-      " notHelpful       0.41      0.44      0.42        71\n",
+      "    helpful       0.63      0.91      0.75        90\n",
+      " notHelpful       0.64      0.23      0.33        62\n",
       "\n",
-      "avg / total       0.45      0.45      0.45       152\n",
+      "avg / total       0.63      0.63      0.58       152\n",
       "\n"
      ]
     }
    ],
    "source": [
     "model = create_pipeline()\n",
-    "model.fit(X_train, y_train)\n",
+    "model.fit(X_train[:10], y_train[:10])\n",
     "y_pred = model.predict(X_test)\n",
     "print(classification_report(y_test, y_pred, target_names=label_encoder.classes_))"
    ]
