--- a/Helpful score prediction.ipynb
+++ b/Helpful score prediction.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Coac\\Anaconda3\\lib\\site-packages\\sklearn\\cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "% matplotlib inline\n",
     "\n",
@@ -26,6 +35,7 @@
     "from sklearn.linear_model import SGDClassifier\n",
     "from sklearn.metrics import classification_report\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.feature_extraction import DictVectorizer\n",
     "from sklearn.cross_validation import train_test_split\n",
     "\n",
     "import string\n",
@@ -385,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -415,10 +425,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.svm import SVC\n",
+    "\n",
     "class MultipleItemSelector(BaseEstimator, TransformerMixin):\n",
     "    def __init__(self, keys):\n",
     "        self.keys = keys\n",
@@ -427,7 +439,18 @@
     "        return self\n",
     "\n",
     "    def transform(self, data_dict):\n",
+    "        if not isinstance(data_dict[:, self.keys][0], str):\n",
+    "            return np.array(list(data_dict[:, self.keys])).reshape(len(data_dict), 1)\n",
     "        return data_dict[:, self.keys]\n",
+    "    \n",
+    "class TextLength(BaseEstimator, TransformerMixin):\n",
+    "    \"\"\"Extract features from each document for DictVectorizer\"\"\"\n",
+    "\n",
+    "    def fit(self, x, y=None):\n",
+    "        return self\n",
+    "\n",
+    "    def transform(self, posts):\n",
+    "        return [{'length': len(text)} for text in posts]\n",
     "\n",
     "def identity(x): \n",
     "    return x\n",
@@ -453,14 +476,24 @@
     "                        tokenizer=identity, preprocessor=None, lowercase=False\n",
     "                    )),\n",
     "                ])),\n",
-    "#                 ('num_values', Pipeline([\n",
-    "#                     ('selector', MultipleItemSelector(keys=2))\n",
+    "#                 ('reviewText_length', Pipeline([\n",
+    "#                     ('selector', MultipleItemSelector(keys=1)),\n",
+    "#                     ('stats', TextLength()),  # returns a list of dicts\n",
+    "#                     ('vect', DictVectorizer()),  # list of dicts -> feature matrix\n",
     "#                 ])),\n",
+    "                ('helpfulCount', Pipeline([\n",
+    "                    ('selector', MultipleItemSelector(keys=2)),\n",
+    "                ])),\n",
+    "#                  ('reviewText_length', Pipeline([\n",
+    "#                     ('selector', MultipleItemSelector(keys=3)),\n",
+    "#                 ])),\n",
+    "                \n",
     "            ],\n",
     "            transformer_weights={\n",
     "                'summary': 1.0,\n",
     "                'reviewText': 1.0,\n",
-    "#                 'num_values': 1.0,\n",
+    "                'helpfulCount': 1.0,\n",
+    "                'reviewText_length': 1.0,\n",
     "            },\n",
     "        )),\n",
     "\n",
@@ -480,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +522,7 @@
        "760"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,6 +544,7 @@
     "X = X.reshape(len(X), 1)\n",
     "X = np.append(X, np.array(ps_reviews.reviewText.values).reshape(len(X), 1), 1)\n",
     "X = np.append(X, np.array(ps_reviews.helpfulCount.values).reshape(len(X), 1), 1)\n",
+    "# X = np.append(X, np.array(ps_reviews.reviewLength.values).reshape(len(X), 1), 1)\n",
     "\n",
     "label_encoder = LabelEncoder()\n",
     "y = label_encoder.fit_transform(y)\n",
@@ -520,27 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "608"
-      ]
-     },
-     "execution_count": 165,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(X_train[:,2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -557,17 +571,28 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "    helpful       0.63      0.91      0.75        90\n",
-      " notHelpful       0.64      0.23      0.33        62\n",
+      "    helpful       0.78      0.68      0.73       335\n",
+      " notHelpful       0.66      0.77      0.71       273\n",
       "\n",
-      "avg / total       0.63      0.63      0.58       152\n",
+      "avg / total       0.73      0.72      0.72       608\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    helpful       0.47      0.44      0.45        80\n",
+      " notHelpful       0.42      0.46      0.44        72\n",
+      "\n",
+      "avg / total       0.45      0.45      0.45       152\n",
       "\n"
      ]
     }
    ],
    "source": [
     "model = create_pipeline()\n",
-    "model.fit(X_train[:10], y_train[:10])\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = model.predict(X_train)\n",
+    "print(classification_report(y_train, y_pred, target_names=label_encoder.classes_))\n",
+    "\n",
     "y_pred = model.predict(X_test)\n",
     "print(classification_report(y_test, y_pred, target_names=label_encoder.classes_))"
    ]
