--- a/Helpful score prediction.ipynb
+++ b/Helpful score prediction.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Coac\\Anaconda3\\lib\\site-packages\\sklearn\\cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
-      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "% matplotlib inline\n",
     "\n",
@@ -37,6 +28,7 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.feature_extraction import DictVectorizer\n",
     "from sklearn.cross_validation import train_test_split\n",
+    "from sklearn.decomposition import TruncatedSVD\n",
     "\n",
     "import string\n",
     "\n",
@@ -425,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,6 +460,7 @@
     "                    ('vectorizer', TfidfVectorizer(\n",
     "                        tokenizer=identity, preprocessor=None, lowercase=False\n",
     "                    )),\n",
+    "#                     ('best', TruncatedSVD(n_components=50)), # LSA\n",
     "                ])),\n",
     "                ('reviewText', Pipeline([\n",
     "                    ('selector', MultipleItemSelector(keys=1)),\n",
@@ -475,6 +468,7 @@
     "                    ('vectorizer', TfidfVectorizer(\n",
     "                        tokenizer=identity, preprocessor=None, lowercase=False\n",
     "                    )),\n",
+    "#                     ('best', TruncatedSVD(n_components=100)), # LSA\n",
     "                ])),\n",
     "#                 ('reviewText_length', Pipeline([\n",
     "#                     ('selector', MultipleItemSelector(keys=1)),\n",
@@ -484,14 +478,14 @@
     "                ('helpfulCount', Pipeline([\n",
     "                    ('selector', MultipleItemSelector(keys=2)),\n",
     "                ])),\n",
-    "#                  ('reviewText_length', Pipeline([\n",
-    "#                     ('selector', MultipleItemSelector(keys=3)),\n",
-    "#                 ])),\n",
+    "                 ('reviewText_length', Pipeline([\n",
+    "                    ('selector', MultipleItemSelector(keys=3)),\n",
+    "                ])),\n",
     "                \n",
     "            ],\n",
     "            transformer_weights={\n",
-    "                'summary': 1.0,\n",
-    "                'reviewText': 1.0,\n",
+    "                'summary': 0.5,\n",
+    "                'reviewText': 0.5,\n",
     "                'helpfulCount': 1.0,\n",
     "                'reviewText_length': 1.0,\n",
     "            },\n",
@@ -534,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +538,7 @@
     "X = X.reshape(len(X), 1)\n",
     "X = np.append(X, np.array(ps_reviews.reviewText.values).reshape(len(X), 1), 1)\n",
     "X = np.append(X, np.array(ps_reviews.helpfulCount.values).reshape(len(X), 1), 1)\n",
-    "# X = np.append(X, np.array(ps_reviews.reviewLength.values).reshape(len(X), 1), 1)\n",
+    "X = np.append(X, np.array(ps_reviews.reviewLength.values).reshape(len(X), 1), 1)\n",
     "\n",
     "label_encoder = LabelEncoder()\n",
     "y = label_encoder.fit_transform(y)\n",
@@ -554,40 +548,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Coac\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\stochastic_gradient.py:128: FutureWarning: max_iter and tol parameters have been added in <class 'sklearn.linear_model.stochastic_gradient.SGDClassifier'> in 0.19. If both are left unset, they default to max_iter=5 and tol=None. If tol is not None, max_iter defaults to max_iter=1000. From 0.21, default max_iter will be 1000, and default tol will be 1e-3.\n",
-      "  \"and default tol will be 1e-3.\" % type(self), FutureWarning)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "    helpful       0.78      0.68      0.73       335\n",
-      " notHelpful       0.66      0.77      0.71       273\n",
+      "    helpful       0.87      0.90      0.89       329\n",
+      " notHelpful       0.88      0.84      0.86       279\n",
       "\n",
-      "avg / total       0.73      0.72      0.72       608\n",
+      "avg / total       0.87      0.87      0.87       608\n",
       "\n",
       "             precision    recall  f1-score   support\n",
       "\n",
-      "    helpful       0.47      0.44      0.45        80\n",
-      " notHelpful       0.42      0.46      0.44        72\n",
+      "    helpful       0.66      0.74      0.70        86\n",
+      " notHelpful       0.60      0.50      0.55        66\n",
       "\n",
-      "avg / total       0.45      0.45      0.45       152\n",
+      "avg / total       0.63      0.64      0.63       152\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "model = create_pipeline()\n",
+    "model = create_pipeline(classifier=SVC(kernel='linear'))\n",
     "model.fit(X_train, y_train)\n",
     "\n",
     "y_pred = model.predict(X_train)\n",
