svm grid search

--- a/Helpful score prediction.ipynb
+++ b/Helpful score prediction.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Coac\\Anaconda3\\lib\\site-packages\\sklearn\\cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "% matplotlib inline\n",
     "\n",
@@ -53,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -308,7 +317,7 @@
        "           AQTC623NCESZW                 13.0   notHelpful  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +527,7 @@
        "760"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -559,17 +568,17 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "    helpful       0.90      0.61      0.73       318\n",
-      " notHelpful       0.69      0.93      0.79       290\n",
+      "    helpful       0.90      0.79      0.84       328\n",
+      " notHelpful       0.79      0.89      0.84       280\n",
       "\n",
-      "avg / total       0.80      0.76      0.76       608\n",
+      "avg / total       0.85      0.84      0.84       608\n",
       "\n",
       "             precision    recall  f1-score   support\n",
       "\n",
-      "    helpful       0.62      0.27      0.37        97\n",
-      " notHelpful       0.35      0.71      0.47        55\n",
+      "    helpful       0.68      0.54      0.60        87\n",
+      " notHelpful       0.52      0.66      0.58        65\n",
       "\n",
-      "avg / total       0.52      0.43      0.41       152\n",
+      "avg / total       0.61      0.59      0.59       152\n",
       "\n"
      ]
     }
@@ -584,6 +593,206 @@
     "y_pred = model.predict(X_test)\n",
     "print(classification_report(y_test, y_pred, target_names=label_encoder.classes_))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Grid search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Automatically created module for IPython interactive environment\n",
+      "# Tuning hyper-parameters for f1\n",
+      "\n",
+      "Fitting 2 folds for each of 12 candidates, totalling 24 fits\n",
+      "[CV] classifier__C=1, classifier__gamma=0.001, classifier__kernel=rbf \n",
+      "[CV]  classifier__C=1, classifier__gamma=0.001, classifier__kernel=rbf, total=   2.1s\n",
+      "[CV] classifier__C=1, classifier__gamma=0.001, classifier__kernel=rbf \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    3.1s remaining:    0.0s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV]  classifier__C=1, classifier__gamma=0.001, classifier__kernel=rbf, total=   2.0s\n",
+      "[CV] classifier__C=1, classifier__gamma=0.0001, classifier__kernel=rbf \n",
+      "[CV]  classifier__C=1, classifier__gamma=0.0001, classifier__kernel=rbf, total=   2.0s\n",
+      "[CV] classifier__C=1, classifier__gamma=0.0001, classifier__kernel=rbf \n",
+      "[CV]  classifier__C=1, classifier__gamma=0.0001, classifier__kernel=rbf, total=   2.0s\n",
+      "[CV] classifier__C=10, classifier__gamma=0.001, classifier__kernel=rbf \n",
+      "[CV]  classifier__C=10, classifier__gamma=0.001, classifier__kernel=rbf, total=   2.1s\n",
+      "[CV] classifier__C=10, classifier__gamma=0.001, classifier__kernel=rbf \n",
+      "[CV]  classifier__C=10, classifier__gamma=0.001, classifier__kernel=rbf, total=   2.1s\n",
+      "[CV] classifier__C=10, classifier__gamma=0.0001, classifier__kernel=rbf \n",
+      "[CV]  classifier__C=10, classifier__gamma=0.0001, classifier__kernel=rbf, total=   2.2s\n",
+      "[CV] classifier__C=10, classifier__gamma=0.0001, classifier__kernel=rbf \n",
+      "[CV]  classifier__C=10, classifier__gamma=0.0001, classifier__kernel=rbf, total=   2.1s\n",
+      "[CV] classifier__C=100, classifier__gamma=0.001, classifier__kernel=rbf \n",
+      "[CV]  classifier__C=100, classifier__gamma=0.001, classifier__kernel=rbf, total=   2.0s\n",
+      "[CV] classifier__C=100, classifier__gamma=0.001, classifier__kernel=rbf \n",
+      "[CV]  classifier__C=100, classifier__gamma=0.001, classifier__kernel=rbf, total=   2.0s\n",
+      "[CV] classifier__C=100, classifier__gamma=0.0001, classifier__kernel=rbf \n",
+      "[CV]  classifier__C=100, classifier__gamma=0.0001, classifier__kernel=rbf, total=   2.1s\n",
+      "[CV] classifier__C=100, classifier__gamma=0.0001, classifier__kernel=rbf \n",
+      "[CV]  classifier__C=100, classifier__gamma=0.0001, classifier__kernel=rbf, total=   1.9s\n",
+      "[CV] classifier__C=1000, classifier__gamma=0.001, classifier__kernel=rbf \n",
+      "[CV]  classifier__C=1000, classifier__gamma=0.001, classifier__kernel=rbf, total=   2.0s\n",
+      "[CV] classifier__C=1000, classifier__gamma=0.001, classifier__kernel=rbf \n",
+      "[CV]  classifier__C=1000, classifier__gamma=0.001, classifier__kernel=rbf, total=   2.0s\n",
+      "[CV] classifier__C=1000, classifier__gamma=0.0001, classifier__kernel=rbf \n",
+      "[CV]  classifier__C=1000, classifier__gamma=0.0001, classifier__kernel=rbf, total=   2.0s\n",
+      "[CV] classifier__C=1000, classifier__gamma=0.0001, classifier__kernel=rbf \n",
+      "[CV]  classifier__C=1000, classifier__gamma=0.0001, classifier__kernel=rbf, total=   2.8s\n",
+      "[CV] classifier__C=1, classifier__kernel=linear ......................\n",
+      "[CV] ....... classifier__C=1, classifier__kernel=linear, total=  21.0s\n",
+      "[CV] classifier__C=1, classifier__kernel=linear ......................\n",
+      "[CV] ....... classifier__C=1, classifier__kernel=linear, total=  16.7s\n",
+      "[CV] classifier__C=10, classifier__kernel=linear .....................\n",
+      "[CV] ...... classifier__C=10, classifier__kernel=linear, total= 1.6min\n",
+      "[CV] classifier__C=10, classifier__kernel=linear .....................\n",
+      "[CV] ...... classifier__C=10, classifier__kernel=linear, total= 2.9min\n",
+      "[CV] classifier__C=100, classifier__kernel=linear ....................\n",
+      "[CV] ..... classifier__C=100, classifier__kernel=linear, total= 1.6min\n",
+      "[CV] classifier__C=100, classifier__kernel=linear ....................\n",
+      "[CV] ..... classifier__C=100, classifier__kernel=linear, total= 2.0min\n",
+      "[CV] classifier__C=1000, classifier__kernel=linear ...................\n",
+      "[CV] .... classifier__C=1000, classifier__kernel=linear, total= 1.6min\n",
+      "[CV] classifier__C=1000, classifier__kernel=linear ...................\n",
+      "[CV] .... classifier__C=1000, classifier__kernel=linear, total= 2.5min\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done  24 out of  24 | elapsed: 13.8min finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best parameters set found on development set:\n",
+      "\n",
+      "{'classifier__C': 100, 'classifier__gamma': 0.0001, 'classifier__kernel': 'rbf'}\n",
+      "\n",
+      "Grid scores on development set:\n",
+      "\n",
+      "0.469 (+/-0.036) for {'classifier__C': 1, 'classifier__gamma': 0.001, 'classifier__kernel': 'rbf'}\n",
+      "0.486 (+/-0.078) for {'classifier__C': 1, 'classifier__gamma': 0.0001, 'classifier__kernel': 'rbf'}\n",
+      "0.454 (+/-0.067) for {'classifier__C': 10, 'classifier__gamma': 0.001, 'classifier__kernel': 'rbf'}\n",
+      "0.497 (+/-0.003) for {'classifier__C': 10, 'classifier__gamma': 0.0001, 'classifier__kernel': 'rbf'}\n",
+      "0.427 (+/-0.045) for {'classifier__C': 100, 'classifier__gamma': 0.001, 'classifier__kernel': 'rbf'}\n",
+      "0.502 (+/-0.041) for {'classifier__C': 100, 'classifier__gamma': 0.0001, 'classifier__kernel': 'rbf'}\n",
+      "0.427 (+/-0.045) for {'classifier__C': 1000, 'classifier__gamma': 0.001, 'classifier__kernel': 'rbf'}\n",
+      "0.493 (+/-0.012) for {'classifier__C': 1000, 'classifier__gamma': 0.0001, 'classifier__kernel': 'rbf'}\n",
+      "0.451 (+/-0.062) for {'classifier__C': 1, 'classifier__kernel': 'linear'}\n",
+      "0.364 (+/-0.014) for {'classifier__C': 10, 'classifier__kernel': 'linear'}\n",
+      "0.344 (+/-0.055) for {'classifier__C': 100, 'classifier__kernel': 'linear'}\n",
+      "0.344 (+/-0.055) for {'classifier__C': 1000, 'classifier__kernel': 'linear'}\n",
+      "\n",
+      "Detailed classification report:\n",
+      "\n",
+      "The model is trained on the full development set.\n",
+      "The scores are computed on the full evaluation set.\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.54      0.64      0.58        11\n",
+      "          1       0.43      0.33      0.38         9\n",
+      "\n",
+      "avg / total       0.49      0.50      0.49        20\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from __future__ import print_function\n",
+    "\n",
+    "from sklearn import datasets\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.metrics import classification_report\n",
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "print(__doc__)\n",
+    "\n",
+    "\n",
+    "# Set the parameters by cross-validation\n",
+    "tuned_parameters = [{'classifier__kernel': ['rbf'], 'classifier__gamma': [1e-3, 1e-4],\n",
+    "                     'classifier__C': [1, 10, 100, 1000]},\n",
+    "                    {'classifier__kernel': ['linear'], 'classifier__C': [1, 10, 100, 1000]}]\n",
+    "\n",
+    "scores = ['f1']\n",
+    "\n",
+    "for score in scores:\n",
+    "    print(\"# Tuning hyper-parameters for %s\" % score)\n",
+    "    print()\n",
+    "\n",
+    "    clf = GridSearchCV(create_pipeline(classifier=SVC()), tuned_parameters, cv=5,\n",
+    "                       scoring='%s_macro' % score, verbose=2, n_jobs=1)\n",
+    "    clf.fit(X_train, y_train)\n",
+    "\n",
+    "    print(\"Best parameters set found on development set:\")\n",
+    "    print()\n",
+    "    print(clf.best_params_)\n",
+    "    print()\n",
+    "    print(\"Grid scores on development set:\")\n",
+    "    print()\n",
+    "    means = clf.cv_results_['mean_test_score']\n",
+    "    stds = clf.cv_results_['std_test_score']\n",
+    "    for mean, std, params in zip(means, stds, clf.cv_results_['params']):\n",
+    "        print(\"%0.3f (+/-%0.03f) for %r\"\n",
+    "              % (mean, std * 2, params))\n",
+    "    print()\n",
+    "\n",
+    "    print(\"Detailed classification report:\")\n",
+    "    print()\n",
+    "    print(\"The model is trained on the full development set.\")\n",
+    "    print(\"The scores are computed on the full evaluation set.\")\n",
+    "    print()\n",
+    "    y_true, y_pred = y_test, clf.predict(X_test)\n",
+    "    print(classification_report(y_true, y_pred))\n",
+    "    print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
