Add the w2c file

--- a/Helpful score prediction.ipynb
+++ b/Helpful score prediction.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/m.victor.le/miniconda3/lib/python3.6/site-packages/sklearn/cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "c:\\users\\coac\\anaconda3\\lib\\site-packages\\sklearn\\cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
       "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
      ]
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -103,17 +103,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -220,30 +220,6 @@
        "      <td>60</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>A361M14PU2GUEG</th>\n",
-       "      <td>4</td>\n",
-       "      <td>I had Dirt 2 on Xbox 360 and it was an okay ga...</td>\n",
-       "      <td>Angry Ryan \"Ryan A. Forrest\"</td>\n",
-       "      <td>DIRT 3</td>\n",
-       "      <td>2011-06-14</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>2</td>\n",
-       "      <td>6629</td>\n",
-       "      <td>Dirt 3 is a popular rally racing game for Play...</td>\n",
-       "      <td>246.63</td>\n",
-       "      <td>...</td>\n",
-       "      <td></td>\n",
-       "      <td>294</td>\n",
-       "      <td>6</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>helpful</td>\n",
-       "      <td>helpful</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>AN3YYDZAS3O1Y</th>\n",
        "      <td>5</td>\n",
        "      <td>Loved playing Dirt 2 and I thought the graphic...</td>\n",
@@ -268,28 +244,52 @@
        "      <td>23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>AQTC623NCESZW</th>\n",
-       "      <td>1</td>\n",
-       "      <td>I can't tell you what a piece of dog**** this ...</td>\n",
-       "      <td>Chesty Puller</td>\n",
-       "      <td>Crash 3 is correct name AKA Microsoft</td>\n",
-       "      <td>2012-11-24</td>\n",
-       "      <td>0.250000</td>\n",
-       "      <td>4</td>\n",
+       "      <th>A1CB8HH9YJ2YZE</th>\n",
+       "      <td>3</td>\n",
+       "      <td>This is a pretty fun game, but you have to buy...</td>\n",
+       "      <td>TheITMan</td>\n",
+       "      <td>Fun</td>\n",
+       "      <td>2012-06-09</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>11</td>\n",
        "      <td>6629</td>\n",
        "      <td>Dirt 3 is a popular rally racing game for Play...</td>\n",
        "      <td>246.63</td>\n",
        "      <td>...</td>\n",
        "      <td></td>\n",
-       "      <td>728</td>\n",
+       "      <td>739</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>helpful</td>\n",
+       "      <td>helpful</td>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A2LQCBLLJVVR5T</th>\n",
+       "      <td>5</td>\n",
+       "      <td>This is a must have for any gamer. Codemasters...</td>\n",
+       "      <td>Timmiley \"Tim M\"</td>\n",
+       "      <td>BEST GRAPHICS OF ANY GAME SO FAR !!!!</td>\n",
+       "      <td>2011-06-13</td>\n",
+       "      <td>0.823529</td>\n",
+       "      <td>17</td>\n",
+       "      <td>6629</td>\n",
+       "      <td>Dirt 3 is a popular rally racing game for Play...</td>\n",
+       "      <td>246.63</td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td>1261</td>\n",
        "      <td>37</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>notHelpful</td>\n",
-       "      <td>notHelpful</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>helpful</td>\n",
+       "      <td>helpful</td>\n",
+       "      <td>9</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>22</td>\n",
+       "      <td>71</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -301,86 +301,86 @@
        "asin       reviewerID                \n",
        "0700099867 A2HD75EMZR8QLN        1   \n",
        "           A1DLMTOTHQ4AST        3   \n",
-       "           A361M14PU2GUEG        4   \n",
        "           AN3YYDZAS3O1Y         5   \n",
-       "           AQTC623NCESZW         1   \n",
+       "           A1CB8HH9YJ2YZE        3   \n",
+       "           A2LQCBLLJVVR5T        5   \n",
        "\n",
        "                                                                  reviewText  \\\n",
        "asin       reviewerID                                                          \n",
        "0700099867 A2HD75EMZR8QLN  Installing the game was a struggle (because of...   \n",
        "           A1DLMTOTHQ4AST  I got this version instead of the PS3 version,...   \n",
-       "           A361M14PU2GUEG  I had Dirt 2 on Xbox 360 and it was an okay ga...   \n",
        "           AN3YYDZAS3O1Y   Loved playing Dirt 2 and I thought the graphic...   \n",
-       "           AQTC623NCESZW   I can't tell you what a piece of dog**** this ...   \n",
+       "           A1CB8HH9YJ2YZE  This is a pretty fun game, but you have to buy...   \n",
+       "           A2LQCBLLJVVR5T  This is a must have for any gamer. Codemasters...   \n",
        "\n",
-       "                                           reviewerName  \\\n",
-       "asin       reviewerID                                     \n",
-       "0700099867 A2HD75EMZR8QLN                           123   \n",
-       "           A1DLMTOTHQ4AST                      ampgreen   \n",
-       "           A361M14PU2GUEG  Angry Ryan \"Ryan A. Forrest\"   \n",
-       "           AN3YYDZAS3O1Y                            Bob   \n",
-       "           AQTC623NCESZW                  Chesty Puller   \n",
+       "                               reviewerName  \\\n",
+       "asin       reviewerID                         \n",
+       "0700099867 A2HD75EMZR8QLN               123   \n",
+       "           A1DLMTOTHQ4AST          ampgreen   \n",
+       "           AN3YYDZAS3O1Y                Bob   \n",
+       "           A1CB8HH9YJ2YZE          TheITMan   \n",
+       "           A2LQCBLLJVVR5T  Timmiley \"Tim M\"   \n",
        "\n",
        "                                                                   summary  \\\n",
        "asin       reviewerID                                                        \n",
        "0700099867 A2HD75EMZR8QLN         Pay to unlock content? I don't think so.   \n",
        "           A1DLMTOTHQ4AST  awesome game, if it did not crash frequently !!   \n",
-       "           A361M14PU2GUEG                                           DIRT 3   \n",
        "           AN3YYDZAS3O1Y       A step up from Dirt 2 and that is terrific!   \n",
-       "           AQTC623NCESZW             Crash 3 is correct name AKA Microsoft   \n",
+       "           A1CB8HH9YJ2YZE                                              Fun   \n",
+       "           A2LQCBLLJVVR5T            BEST GRAPHICS OF ANY GAME SO FAR !!!!   \n",
        "\n",
        "                                date  helpfulRate  helpfulCount  rank  \\\n",
        "asin       reviewerID                                                   \n",
        "0700099867 A2HD75EMZR8QLN 2012-07-09     0.666667            12  6629   \n",
        "           A1DLMTOTHQ4AST 2011-09-14     0.700000            10  6629   \n",
-       "           A361M14PU2GUEG 2011-06-14     1.000000             2  6629   \n",
        "           AN3YYDZAS3O1Y  2011-08-14     0.846154            13  6629   \n",
-       "           AQTC623NCESZW  2012-11-24     0.250000             4  6629   \n",
+       "           A1CB8HH9YJ2YZE 2012-06-09     1.000000            11  6629   \n",
+       "           A2LQCBLLJVVR5T 2011-06-13     0.823529            17  6629   \n",
        "\n",
        "                                                                 description  \\\n",
        "asin       reviewerID                                                          \n",
        "0700099867 A2HD75EMZR8QLN  Dirt 3 is a popular rally racing game for Play...   \n",
        "           A1DLMTOTHQ4AST  Dirt 3 is a popular rally racing game for Play...   \n",
-       "           A361M14PU2GUEG  Dirt 3 is a popular rally racing game for Play...   \n",
        "           AN3YYDZAS3O1Y   Dirt 3 is a popular rally racing game for Play...   \n",
-       "           AQTC623NCESZW   Dirt 3 is a popular rally racing game for Play...   \n",
+       "           A1CB8HH9YJ2YZE  Dirt 3 is a popular rally racing game for Play...   \n",
+       "           A2LQCBLLJVVR5T  Dirt 3 is a popular rally racing game for Play...   \n",
        "\n",
        "                            price       ...       brand reviewLength  \\\n",
        "asin       reviewerID                   ...                            \n",
        "0700099867 A2HD75EMZR8QLN  246.63       ...                      779   \n",
        "           A1DLMTOTHQ4AST  246.63       ...                     3489   \n",
-       "           A361M14PU2GUEG  246.63       ...                      294   \n",
        "           AN3YYDZAS3O1Y   246.63       ...                      431   \n",
-       "           AQTC623NCESZW   246.63       ...                      728   \n",
+       "           A1CB8HH9YJ2YZE  246.63       ...                      739   \n",
+       "           A2LQCBLLJVVR5T  246.63       ...                     1261   \n",
        "\n",
        "                           summaryLength  reviewerNameLength  helpfulOrNot  \\\n",
        "asin       reviewerID                                                        \n",
        "0700099867 A2HD75EMZR8QLN             40                 3.0       helpful   \n",
        "           A1DLMTOTHQ4AST             47                 8.0       helpful   \n",
-       "           A361M14PU2GUEG              6                28.0       helpful   \n",
        "           AN3YYDZAS3O1Y              43                 3.0       helpful   \n",
-       "           AQTC623NCESZW              37                13.0    notHelpful   \n",
+       "           A1CB8HH9YJ2YZE              3                 8.0       helpful   \n",
+       "           A2LQCBLLJVVR5T             37                16.0       helpful   \n",
        "\n",
        "                          helpfulOrNotOrNeutral exclamationCount  \\\n",
        "asin       reviewerID                                              \n",
        "0700099867 A2HD75EMZR8QLN               helpful                1   \n",
        "           A1DLMTOTHQ4AST               helpful                2   \n",
-       "           A361M14PU2GUEG               helpful                0   \n",
        "           AN3YYDZAS3O1Y                helpful                2   \n",
-       "           AQTC623NCESZW             notHelpful                0   \n",
+       "           A1CB8HH9YJ2YZE               helpful                8   \n",
+       "           A2LQCBLLJVVR5T               helpful                9   \n",
        "\n",
        "                           questionCount  threeDotsCount  uppercaseCount  \n",
        "asin       reviewerID                                                     \n",
        "0700099867 A2HD75EMZR8QLN              2               0              27  \n",
        "           A1DLMTOTHQ4AST              0               0              60  \n",
-       "           A361M14PU2GUEG              0               0              13  \n",
        "           AN3YYDZAS3O1Y               0               3              23  \n",
-       "           AQTC623NCESZW               0               0              22  \n",
+       "           A1CB8HH9YJ2YZE              6               0              70  \n",
+       "           A2LQCBLLJVVR5T              0               0              71  \n",
        "\n",
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +605,7 @@
        "195"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +626,7 @@
        "783"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,13 +830,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
@@ -907,7 +900,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Train w2v and vizualisation"
+    "### Train w2v"
    ]
   },
   {
@@ -1240,13 +1233,20 @@
    ],
    "source": [
     "#Save the model\n",
-    "word2vec_model.save(\"word2vec_model_trained_on_video_games_5.w2v\")\n",
+    "word2vec_model.save(\"w2v/video_games.w2v\")\n",
     "print(\"Model saved\")"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load and visualize w2c"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1260,7 +1260,7 @@
    "source": [
     "# Load our word2vec model\n",
     "import gensim\n",
-    "w2v_model = gensim.models.word2vec.Word2Vec.load(\"word2vec_model_trained_on_video_games_5.w2v\")\n",
+    "w2v_model = gensim.models.word2vec.Word2Vec.load(\"w2v/video_games.w2v\")\n",
     "print(\"Model loaded\")"
    ]
   },
@@ -1525,76 +1525,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/m.victor.le/miniconda3/lib/python3.6/site-packages/ipykernel_launcher.py:1: DeprecationWarning: Call to deprecated `most_similar` (Method will be removed in 4.0.0, use self.wv.most_similar() instead).\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "[('p', 0.6748400926589966),\n",
        " ('playstaion', 0.639427900314331),\n",
        " ('playstion', 0.6300841569900513),\n",
-       " ('ps3', 0.6289234161376953),\n",
+       " ('ps3', 0.6289232969284058),\n",
        " ('ps2', 0.6052511930465698),\n",
-       " ('playsation', 0.5917361378669739),\n",
+       " ('playsation', 0.5917361974716187),\n",
        " ('myplaystation', 0.5900927782058716),\n",
        " ('ps1', 0.5873886346817017),\n",
        " ('theplaystation', 0.5868010520935059),\n",
-       " ('aplaystation', 0.5847924947738647)]"
+       " ('aplaystation', 0.5847926139831543)]"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "w2v_model.most_similar(\"playstation\")"
+    "w2v_model.wv.most_similar(\"playstation\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/m.victor.le/miniconda3/lib/python3.6/site-packages/ipykernel_launcher.py:1: DeprecationWarning: Call to deprecated `most_similar` (Method will be removed in 4.0.0, use self.wv.most_similar() instead).\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[('bros', 0.7767922878265381),\n",
+       "[('bros', 0.7767923474311829),\n",
        " ('kart', 0.7274721264839172),\n",
        " ('luigi', 0.6836210489273071),\n",
        " ('sunshine', 0.6641625165939331),\n",
-       " ('nsmb', 0.6625683903694153),\n",
-       " ('wiimario', 0.6515724658966064),\n",
+       " ('nsmb', 0.6625683307647705),\n",
+       " ('wiimario', 0.6515724062919617),\n",
        " ('smb', 0.6476815342903137),\n",
        " ('nsmb2', 0.6301655173301697),\n",
-       " ('marioworld', 0.62470942735672),\n",
+       " ('marioworld', 0.6247094869613647),\n",
        " ('mariokart', 0.6150649785995483)]"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "w2v_model.most_similar(\"mario\")"
+    "w2v_model.wv.most_similar(\"mario\")"
    ]
   },
   {
@@ -2047,7 +2031,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -2061,7 +2045,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
